--- a/_gulp/_scss/1-base/_variables.scss
+++ b/_gulp/_scss/1-base/_variables.scss
@@ -16,3 +16,5 @@ $color-red: red;
 $color-pink: pink;
 
 $primary-font: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+
+$font-montserrat: 'Montserrat', $primary-font;
