--- a/_gulp/_scss/1-base/_font.scss
+++ b/_gulp/_scss/1-base/_font.scss
@@ -1,2 +1,101 @@
 /* fonts */
 // google webfont https://google-webfonts-helper.herokuapp.com/fonts
+
+/* montserrat-regular - latin_cyrillic */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-display: block;
+  font-weight: 400;
+  src: url('../fonts/montserrat/montserrat-v14-latin_cyrillic-regular.eot'); /* IE9 Compat Modes */
+  src: local('Montserrat Regular'), local('Montserrat-Regular'),
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-regular.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+/* montserrat-italic - latin_cyrillic */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: italic;
+  font-display: block;
+  font-weight: 400;
+  src: url('../fonts/montserrat/montserrat-v14-latin_cyrillic-italic.eot'); /* IE9 Compat Modes */
+  src: local('Montserrat Italic'), local('Montserrat-Italic'),
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-italic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-italic.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-italic.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+/* montserrat-700 - latin_cyrillic */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-display: block;
+  font-weight: 700;
+  src: url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700.eot'); /* IE9 Compat Modes */
+  src: local('Montserrat Bold'), local('Montserrat-Bold'),
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+/* montserrat-700italic - latin_cyrillic */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: italic;
+  font-display: block;
+  font-weight: 700;
+  src: url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700italic.eot'); /* IE9 Compat Modes */
+  src: local('Montserrat Bold Italic'), local('Montserrat-BoldItalic'),
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700italic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700italic.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700italic.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700italic.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+
+/* ubuntu-regular - latin_cyrillic */
+@font-face {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-display: block;
+  font-weight: 400;
+  src: url('../fonts/ubuntu/ubuntu-v14-latin_cyrillic-regular.eot'); /* IE9 Compat Modes */
+  src: local('Ubuntu Regular'), local('Ubuntu-Regular'),
+       url('../fonts/ubuntu/ubuntu-v14-latin_cyrillic-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/ubuntu/ubuntu-v14-latin_cyrillic-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/ubuntu/ubuntu-v14-latin_cyrillic-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/ubuntu/ubuntu-v14-latin_cyrillic-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/ubuntu/ubuntu-v14-latin_cyrillic-regular.svg#Ubuntu') format('svg'); /* Legacy iOS */
+}
+/* ubuntu-500 - latin_cyrillic */
+@font-face {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-display: block;
+  font-weight: 500;
+  src: url('../fonts/ubuntu/ubuntu-v14-latin_cyrillic-500.eot'); /* IE9 Compat Modes */
+  src: local('Ubuntu Medium'), local('Ubuntu-Medium'),
+       url('../fonts/ubuntu/ubuntu-v14-latin_cyrillic-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/ubuntu/ubuntu-v14-latin_cyrillic-500.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/ubuntu/ubuntu-v14-latin_cyrillic-500.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/ubuntu/ubuntu-v14-latin_cyrillic-500.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/ubuntu/ubuntu-v14-latin_cyrillic-500.svg#Ubuntu') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon/fonts/icomoon.eot?wo4bh2');
+  src:  url('../fonts/icomoon/fonts/icomoon.eot?wo4bh2#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon/fonts/icomoon.woff2?wo4bh2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/icomoon/fonts/icomoon.ttf?wo4bh2') format('truetype'),
+    url('../fonts/icomoon/fonts/icomoon.woff?wo4bh2') format('woff'),
+    url('../fonts/icomoon/fonts/icomoon.svg?wo4bh2#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
