--- a/_gulp/_scss/1-base/_variables.scss
+++ b/_gulp/_scss/1-base/_variables.scss
@@ -5,15 +5,16 @@
 //   @include defineColorHSL(--color-primary, 0, 100%, 56%);
 // }
 
-$primary-color: black;
+$primary-color: #202020;
 
 $link-color: blue;
 
 $color-white: #ffffff;
-$color-gray: #cccccc;
+$color-gray: #f1f1f1;
 $color-black: #000000;
-$color-red: red;
+$color-red: #e20b0b;
 $color-pink: pink;
+$color-orange: #ffa21e;
 
 $primary-font: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 
