--- a/_gulp/_pug/_include/_header.pug
+++ b/_gulp/_pug/_include/_header.pug
@@ -2,14 +2,7 @@
 header.header
   .container
     
-    -var navigation = { 'Главная': '#', 'О нас': '#', 'Продукция': '#', 'Сотрудничество': '#', 'Наши магазины': '#', 'Контакты': '#'};
-    
-    nav.navigation(role="navigation")
-      ul
-        each val, key in navigation
-          if active === key
-            li.active
-              a(href=val, title=key)= key
-          else
-            li
-              a(href=val, title=key)= key
+    .header__wrapper
+      .logo.header__logo
+        img(src="./images/logo.png", alt="")
+      button(type="button").header__btn Войти
