--- a/_gulp/_scss/2-layout/_header.scss
+++ b/_gulp/_scss/2-layout/_header.scss
@@ -1,4 +1,40 @@
 /* header */
 .header {
-  background-color: $color-gray;
+  background-color: transparent;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  &.is-scroll {
+    background-color: rgba($color-white,.1);
+  }
+  &__wrapper {
+    height: 107px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: height 0.35s;
+    max-width: 1007px;
+    margin: 0 auto;
+    .is-scroll & {
+      height: 67px;
+    }
+  }
+  &-holder {
+    height: 107px;
+  }
+  &__btn {
+    height: 42px;
+    min-width: 157px;
+    border-radius: 35px;
+    background: #ffe534;
+    color: $primary-color;
+    transition: all 0.35s;
+    font-weight: 600;
+    font-size: rem(22px);
+    &:hover {
+      background: darken(#ffe534,15%);
+    }
+  }
 }
