--- a/_gulp/_pug/index.pug
+++ b/_gulp/_pug/index.pug
@@ -8,49 +8,73 @@ html(lang="ru")
   include ./_include/_head
 
   body
+    .base
 
-    // Preloader
-    include ./_include/_preloader
+      // Preloader
+      include ./_include/_preloader
 
-    include ./_include/_header
+      include ./_include/_header
 
-    // Content
-    .content
-      
-      // Main section
-      .section.main-section
+      // Content
+      main.content
+
+        // Bg-top
         .container
-          
-          .main-section__head
-            h1 Онлайн-школа вокала
-            .main-section__untitle Учитесь петь красиво 
-              strong где удобно и когда удобно!
-
-          .main-section__wrapper
-            .main-section__img
-              img(src="./images/img-girl.png", alt="")
-            .main-section__form
-              form(action="")
-                fieldset
-                  .form-group
-                    input(type="text" name="name" placeholder="Введите имя")
-                  .form-group
-                    input(type="text" name="phone" placeholder="Введите телефон")
-                  .form-group
-                    input(type="email" name="email" placeholder="Введите электронную почту")
-                  .form-group
-                    label.form-checkbox
-                      input(type="checkbox" name="checkbox1")
-                      span Заниматься будет ребёнок
-                  .form-group
-                    input(type="text" name="age" placeholder="Введите возраст ребенка")
-                button(type="submit").btn Хочу петь!
-                .form-info Оставляя заявку, вы принимаете условия соглашения
+          .bg-img
+            .bg-img__wrapper
+              img(src="./images/img-block1-left.png", alt="").bg-img__img.bg-img__img--top-left
+              img(src="./images/img-block1-right.png", alt="").bg-img__img.bg-img__img--top-right
         
+        // Main section
+        .section.main-section
+          .container
+            
+            .main-section__head
+              h1 Онлайн-школа вокала
+              .main-section__untitle Учитесь петь красиво 
+                strong где удобно и когда удобно!
+
+            .main-section__wrapper
+              .bg-img
+                .bg-img__wrapper
+                  img(src="./images/img-main-section-1.png", alt="").bg-img__img.bg-img__img--ms1
+                  img(src="./images/img-main-section-2.png", alt="").bg-img__img.bg-img__img--ms2
+              .main-section__img
+                img(src="./images/img-girl-bg.png", alt="").main-section__img-1
+                img(src="./images/img-girl.png", alt="").main-section__img-2
+              .main-section__form
+                .main-section__form-content
+                  .main-section__form-head Индивидуальный урок вокала за 
+                    strong 1 руб.
+                  ul
+                    li Оставляете заявку
+                    li Выбираете время урока
+                    li Оплачиваете 1 руб.
+                    li Поёте и радуетесь!
+                form(action="" autocomplete="off")
+                  fieldset
+                    .form-group
+                      input(type="text" name="name" placeholder="Введите имя").form-control
+                    .form-group
+                      input(type="text" name="phone" placeholder="Введите телефон").form-control
+                    .form-group.form-group--mb21
+                      input(type="email" name="email" placeholder="Введите электронную почту").form-control
+                    .form-group
+                      label.label-checkbox
+                        input(type="checkbox" name="checkbox1")
+                        span.label-checkbox__input
+                        span.label-checkbox__label
+                          b Заниматься будет ребёнок
+                    .form-group.form-group--mb21
+                      input(type="text" name="age" placeholder="Введите возраст ребенка").form-control
+                  button(type="submit").btn.btn--block Хочу петь!
+                  .form-info.text-center Оставляя заявку, вы принимаете 
+                    a(href="#!" target="_blank") условия соглашения
+          
 
 
-    include ./_include/_footer
-    div(style="height: 1000px; background-color: #000")
+      include ./_include/_footer
+      div(style="height: 1000px; background-color: #000")
 
     // Load Scripts
     include ./_include/_footer-js
