--- a/_gulp/_scss/1-base/_base.scss
+++ b/_gulp/_scss/1-base/_base.scss
@@ -25,6 +25,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
 }
+.base {
+  overflow: hidden;
+  position: relative;
+}
 
 //  Typography
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
@@ -88,12 +92,12 @@ hr {
 
 // Links
 a, .link {
-  color: $link-color;
+  color: $primary-color;
   text-decoration: underline;
   outline: none;
   transition: color 0.35s, background 0.35s, border 0.35s;
   &:hover, &:focus, &:active {
-    color: $link-color;
+    color: $primary-color;
     text-decoration: none;
     outline: none;
   }
