--- a/_gulp/_scss/2-layout/_header.scss
+++ b/_gulp/_scss/2-layout/_header.scss
@@ -7,7 +7,8 @@
   right: 0;
   z-index: 100;
   &.is-scroll {
-    background-color: rgba($color-white,.1);
+    // background-color: rgba($color-white,.1);
+    background-color: rgba(#ae0101,.8);
   }
   &__wrapper {
     height: 107px;
