--- a/_gulp/_scss/2-layout/_forms.scss
+++ b/_gulp/_scss/2-layout/_forms.scss
@@ -55,7 +55,7 @@ label {
     color: $primary-color;
     background-color: $color-white;
     background-image: none;
-    border: 1px solid $color-white;
+    border: 1px solid #c5c5c5;
     border-radius: 35px;
     box-shadow: nonw;
     transition: all .35s;
