--- a/_gulp/_scss/1-base/_base.scss
+++ b/_gulp/_scss/1-base/_base.scss
@@ -18,7 +18,7 @@ html, body {
 
 body {
   // background-color: alpha(var(--color-primary), 1);
-  background: $color-white;
+  background: #fafafa;
   font-size: rem(17px);
   font-family: $font-montserrat;
   color: $primary-color;
@@ -48,6 +48,7 @@ body {
   font-size: rem(45px);
   line-height: 1.14;
   margin-bottom: 20px;
+  font-weight: 900;
 }
 .h3, h3 {
   font-size: rem(16px);
@@ -70,7 +71,7 @@ small, .small {
 }
 
 p {
-  line-height: 22px;
+  line-height: 1.4;
   margin: 0 0 20px 0;
 }
 
