--- a/_gulp/_pug/index.pug
+++ b/_gulp/_pug/index.pug
@@ -96,74 +96,71 @@ html(lang="ru")
                   li Расписание уроков
                   li Оплаты и списания
 
-            .form-once
-              .form-once__wrapper
-                form(action="#!")
-                  .form-once__head Индивидуальный урок вокала за 
-                    strong 1 руб.
-                  fieldset
-                    .form-once__row1
-                      .div1
-                        .form-group
-                          input(type="text" name="name" placeholder="Введите имя").form-control
-                      .div2
-                        .form-group
-                          input(type="text" name="phone" placeholder="Введите телефон").form-control
-                      .div3
-                        .form-group
-                          input(type="email" name="email" placeholder="Введите электронную почту").form-control
-                    .form-once__row2
-                      .div1
-                        .form-group
-                          input(type="text" name="age" placeholder="Введите возраст ребенка").form-control
-                        .form-group
-                          label.label-checkbox
-                            input(type="checkbox" name="checkbox1")
-                            span.label-checkbox__input
-                            span.label-checkbox__label
-                              b Заниматься будет ребёнок
-                      .div2
-                        button(type="submit").btn.btn--yellow.btn--block Хочу петь!
-                        .form-info.text-center Оставляя заявку, вы принимаете 
-                          a(href="#!" target="_blank") условия соглашения
+            +formOnce
 
         // Video
         .section.video
-          .video__wrapper
-            .container
+          .container
 
-              .content__head.video__head
-                h2 Начните учиться прямо сейчас на бесплатном курсе!
+            .content__head.video__head
+              h2 Начните учиться прямо сейчас на бесплатном курсе!
 
-              .video__content
-                p Автор курса — Наталья Канашова, преподаватель эстрадного вокала со стажем больше 30 лет.
+            .video__content
+              p Автор курса — Наталья Канашова, преподаватель эстрадного вокала со стажем больше 30 лет.
 
-              .video__list
-                div
-                  a(href="https://www.youtube.com/watch?v=Jn_IIOyTr_A").video__block.popup-youtube
-                    span.video__block-shadow
-                    img(src="./tmp/video-img-1.png", alt="").video__block-img
-                    span.video__block-play
-                div
-                  a(href="https://www.youtube.com/watch?v=Jn_IIOyTr_A").video__block.popup-youtube
-                    span.video__block-shadow
-                    img(src="./tmp/video-img-2.png", alt="").video__block-img
-                    span.video__block-play
-                div
-                  a(href="https://www.youtube.com/watch?v=Jn_IIOyTr_A").video__block.popup-youtube
-                    span.video__block-shadow
-                    img(src="./tmp/video-img-3.png", alt="").video__block-img
-                    span.video__block-play
-                div
-                  a(href="https://www.youtube.com/watch?v=Jn_IIOyTr_A").video__block.popup-youtube
-                    span.video__block-shadow
-                    img(src="./tmp/video-img-4.png", alt="").video__block-img
-                    span.video__block-play
+            .video__list
+              div
+                a(href="https://www.youtube.com/watch?v=Jn_IIOyTr_A").video__block.popup-youtube
+                  span.video__block-shadow
+                  img(src="./tmp/video-img-1.png", alt="").video__block-img
+                  span.video__block-play
+              div
+                a(href="https://www.youtube.com/watch?v=Jn_IIOyTr_A").video__block.popup-youtube
+                  span.video__block-shadow
+                  img(src="./tmp/video-img-2.png", alt="").video__block-img
+                  span.video__block-play
+              div
+                a(href="https://www.youtube.com/watch?v=Jn_IIOyTr_A").video__block.popup-youtube
+                  span.video__block-shadow
+                  img(src="./tmp/video-img-3.png", alt="").video__block-img
+                  span.video__block-play
+              div
+                a(href="https://www.youtube.com/watch?v=Jn_IIOyTr_A").video__block.popup-youtube
+                  span.video__block-shadow
+                  img(src="./tmp/video-img-4.png", alt="").video__block-img
+                  span.video__block-play
 
-              .video__more
-                img(src="", alt="")
-                span Больше уроков на нашем канале!
+            .video__more
+              a(href="#!" target="_blank")
+                img(src="./images/icon-youtube.png", alt="")
+              span Больше уроков 
+                b на нашем канале!
 
+        // School
+        .section.school
+          .container
+
+            .content__head
+              h2 О школе
+
+            .school__content
+              p Sunday Rock Online — это онлайн-школа музыки. Теперь вы можете учиться у лучших преподавателей, не выходя из дома!
+
+        // Comments
+        .section.comments
+          .container
+
+            .content__head
+              h2 Отзывы
+
+        // Learn
+        .section.learn
+          .container
+
+            .content__head
+              h2 Начните учиться прямо сейчас!
+
+            +formOnce
 
       include ./_include/_footer
       div(style="height: 1000px; background-color: #000")
