--- a/_gulp/_pug/_include/_preloader.pug
+++ b/_gulp/_pug/_include/_preloader.pug
@@ -14,17 +14,17 @@ mixin formOnce
           .form-once__row1
             .div1
               .form-group
-                input(type="text" name="name" placeholder="Введите имя").form-control
+                input(type="text" name="name" placeholder="Введите имя" required).form-control
             .div2
               .form-group
-                input(type="text" name="phone" placeholder="Введите телефон").form-control
+                input(type="text" name="phone" placeholder="Введите телефон" required).form-control
             .div3
               .form-group
-                input(type="email" name="email" placeholder="Введите электронную почту").form-control
+                input(type="email" name="email" placeholder="Введите электронную почту" required).form-control
           .form-once__row2
             .div1
               .form-group
-                input(type="text" name="age" placeholder="Введите возраст ребенка").form-control
+                input(type="text" name="age" placeholder="Введите возраст ребенка" required).form-control
               .form-group
                 label.label-checkbox
                   input(type="checkbox" name="checkbox1")
