--- a/_gulp/_scss/1-base/_font.scss
+++ b/_gulp/_scss/1-base/_font.scss
@@ -5,6 +5,7 @@
 @font-face {
   font-family: 'Montserrat';
   font-style: normal;
+  font-display: swap;
   font-weight: 400;
   src: url('../font/montserrat/montserrat-v14-latin_cyrillic-regular.eot'); /* IE9 Compat Modes */
   src: local('Montserrat Regular'), local('Montserrat-Regular'),
@@ -18,6 +19,7 @@
 @font-face {
   font-family: 'Montserrat';
   font-style: normal;
+  font-display: swap;
   font-weight: 500;
   src: url('../font/montserrat/montserrat-v14-latin_cyrillic-500.eot'); /* IE9 Compat Modes */
   src: local('Montserrat Medium'), local('Montserrat-Medium'),
@@ -31,6 +33,7 @@
 @font-face {
   font-family: 'Montserrat';
   font-style: normal;
+  font-display: swap;
   font-weight: 600;
   src: url('../font/montserrat/montserrat-v14-latin_cyrillic-600.eot'); /* IE9 Compat Modes */
   src: local('Montserrat SemiBold'), local('Montserrat-SemiBold'),
@@ -44,6 +47,7 @@
 @font-face {
   font-family: 'Montserrat';
   font-style: normal;
+  font-display: swap;
   font-weight: 700;
   src: url('../font/montserrat/montserrat-v14-latin_cyrillic-700.eot'); /* IE9 Compat Modes */
   src: local('Montserrat Bold'), local('Montserrat-Bold'),
@@ -57,6 +61,7 @@
 @font-face {
   font-family: 'Montserrat';
   font-style: normal;
+  font-display: swap;
   font-weight: 800;
   src: url('../font/montserrat/montserrat-v14-latin_cyrillic-800.eot'); /* IE9 Compat Modes */
   src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'),
@@ -70,6 +75,7 @@
 @font-face {
   font-family: 'Montserrat';
   font-style: normal;
+  font-display: swap;
   font-weight: 900;
   src: url('../font/montserrat/montserrat-v14-latin_cyrillic-900.eot'); /* IE9 Compat Modes */
   src: local('Montserrat Black'), local('Montserrat-Black'),
