--- a/_gulp/_scss/2-layout/_forms.scss
+++ b/_gulp/_scss/2-layout/_forms.scss
@@ -64,6 +64,18 @@ label {
     &:focus, &:active {
       border-color: $primary-color;
     }
+    &.error {
+      border-color: red;
+    }
+    &+.error {
+      position: absolute;
+      font-size: 12px;
+      color: red;
+      font-weight: 500;
+      padding-left: 20px;
+      margin: 0;
+      line-height: 1.2;
+    }
   }
   &-label, &__label {
     display: block;
@@ -78,36 +90,6 @@ textarea {
   &.form-control, &.form__control {
     height: 150px;
     resize: none;
-  }
-}
-
-.has {
-  &-success {
-    .form-control {
-      border-color: #3c763d;
-      box-shadow: inset 0 1px 1px rgba(#3c763d,.75);
-    }
-    .control-label {
-      color: #3c763d;
-    }
-  }
-  &-warning {
-    .form-control {
-      border-color: #8a6d3b;
-      box-shadow: inset 0 1px 1px rgba(#8a6d3b, .75);
-    }
-    .control-label {
-      color: #8a6d3b;
-    }
-  }
-  &-error {
-    .form-control {
-      border-color: #a94442;
-      box-shadow: inset 0 1px 1px rgba(#a94442, .75);
-    }
-    .control-label {
-      color: #a94442;
-    }
   }
 }
 
